<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.signin.SignInActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="@dimen/main_image_margin"
        android:layout_height="@dimen/main_image_margin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_margin"
        android:src="@drawable/online_logo" />

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_marginTop="@dimen/secondary_margin"
        android:layout_marginBottom="@dimen/secondary_margin"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="@dimen/text_heading" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_back"
        android:layout_margin="@dimen/main_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/username"
            app:boxCornerRadiusBottomEnd="@dimen/main_radius"
            app:boxCornerRadiusBottomStart="@dimen/main_radius"
            app:boxCornerRadiusTopEnd="@dimen/main_radius"
            app:boxCornerRadiusTopStart="@dimen/main_radius"
            app:boxStrokeColor="@color/primary_color"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeWidthFocused="0.5dp"
            app:cursorColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_body" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/secondary_margin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="@dimen/main_radius"
            app:boxCornerRadiusBottomStart="@dimen/main_radius"
            app:boxCornerRadiusTopEnd="@dimen/main_radius"
            app:boxCornerRadiusTopStart="@dimen/main_radius"
            app:boxStrokeColor="@color/primary_color"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeWidthFocused="0.5dp"
            app:cursorColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:textSize="@dimen/text_body" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/main_margin"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/main_margin"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_heading"
            app:chipBackgroundColor="@color/cta_color"
            app:chipStrokeWidth="0dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lorem_ipsum_short"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/text_fine_body" />


    <!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/ll_login"-->
<!--        android:layout_margin="@dimen/main_margin"-->
<!--        android:fontFamily="@font/poppins_regular"-->
<!--        android:text="@string/lorem_ipsum_long"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="@dimen/text_body" />-->

</RelativeLayout>